# less-is-more

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
dataset_builder/configs/: build.yaml  build_debug.yaml  build_example.yaml
dataset_builder/helpers/: transform_helpers.py
dataset_builder/mppi_planner/: fast_geodis_wrapper.py  mppi_optimizer.py  mppi_planner.py  traversability_filter.py  weights.npz
dataset_builder/src/: build_paths.py  grand_tour_dataset.py  helpers.py  mission_data_source.py  visualize.py
docs/: README.md  index.html  serve_local.py
docs/static/css/: index.css
docs/static/js/: index.js
limo/: README.md
limo/configs/: inference.yaml  train.yaml
limo/configs/callbacks/: default.yaml  lr_monitor.yaml  safetensors.yaml  tqdm_progress_bar.yaml
limo/configs/dataset/: limo.yaml  limo_local.yaml  limo_local_example.yaml  missions_split.csv  missions_split_debug.csv  missions_split_example.csv
limo/configs/experiment/: train_limo_debug.yaml  train_limo_local.yaml  train_limo_local_example.yaml  train_limo_on_D_aug.yaml  train_limo_on_D_tel.yaml  train_limo_side_cams.yaml
limo/configs/hydra/: default.yaml
limo/configs/logger/: wandb.yaml
limo/configs/model/: limo.yaml  limo_side_cams.yaml
limo/configs/paths/: default.yaml
limo/configs/trainer/: default.yaml
limo/src/: inference.py  train.py
limo/src/dataset/: limo_datamodule.py  limo_datset.py  local_datamodule.py
limo/src/models/: limo_model.py
limo/src/utils/: __init__.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py  (+2 more)
utils/: grandtour_hub.py
(+5 files in other folders)
