[project]
name = "less-is-more"
version = "0.1.0"
description = "Codebase for ess is More: Scalable Visual Navigation from Limited Data"
authors = [
  {name = "Yves Inglin"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "numpy>=2.2.6",
  "lightning>=2.6.1",
  "omegaconf>=2.3.0",
  "matplotlib>=3.10.8",
  "hydra-core>=1.3.2",
  "opencv-python>=4.13.0.92",
  "wandb>=0.25.0",
  "hydra-colorlog>=1.2.0",
  "rich>=14.3.2",
  "types-pyyaml>=6.0.12.20250915",
  "safetensors>=0.4.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[tool.ruff]
lint.ignore = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["limo*", "dataset*", "dataset_builder*", "helpers*", "mppi_planner*", "ros_package*"]
